"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-07-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-82:
	  Added -get variants to many commands that list nodes.
	  Wrote re-usable functions to print optional values of nodes.  
	  Test cases added.


2011-07-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81:
	  Fixed latent bug with prsim checkpoint dump, introduced by
		commit HACKT-00-01-04-main-00-84-18, ::dump_checkpoint
		had wrong type for timing_probability, cause crash.
		Fixes ACX-PR-6486.
	  Test case added, now tests textual checkpoint dump.


2011-07-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-80:
	  Fixed ACX-PR-5876: false positive diagnostic on wire-buf
		on built-in channel types.  Old test cases' createdump
		expects updated: meta! and meta? flags are only applied when
		possibly connected to producer/consumer, not just by
		connecting to ports.  New test cases added as chp/buf*.


2011-07-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-79b:
	  AST/instance.cc: fixed front-end bug ACX-PR-5273, 
		failure to reject parameter value expression in port.
	  Test cases added.


2011-07-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-79a:
	  No source revision: added scripts/spice-to-hac.awk and tested it.


2011-07-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-79:
	  lexer/hackt-lex.ll: added support for escaped identifiers,
		Verilog style: \garbage[space]
	  Added one regression test case.


2011-06-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-78:
	  No source revision, moving repo from cvs to git.

2011-06-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-77: