@@ -32,6 +32,7 @@ DECLARE_COMMON_STATELESS_COMMAND_CLASS(CommentComment)
 DECLARE_COMMON_STATELESS_COMMAND_CLASS(Exit)
 DECLARE_COMMON_STATELESS_COMMAND_CLASS(Quit)
 DECLARE_COMMON_STATELESS_COMMAND_CLASS(Abort)
+DECLARE_COMMON_STATELESS_COMMAND_CLASS(Precision)
 
 DECLARE_COMMON_COMMAND_CLASS(All)
 DECLARE_COMMON_COMMAND_CLASS(Alias)
