@@ -1,0 +1,5 @@
+precision: 6
+time: 0
+time: 1.23457e+08
+precision: 12
+time: 123456789
